Mac: Make image dragging 162.4% more awesome.

Also needs a webkit patch to do anything ( https://bugs.webkit.org/show_bug.cgi?id=37069 ), but can be landed independently.

BUG=11457,18992
TEST=(all require the webkit patch, so this won't work yet)
http://html5demos.com/drag and http://ljouanneau.com/lab/html5/demodragdrop.html
  Dragging should show image
http://www.google.com/
  Dragging google image should show image
http://www.travelvivi.com/wp-content/uploads/2009/09/Eiffel_Tower.jpg
  Dragging image should work, drag image should be smaller than image itself
Random website
  Mark some text, drag it. Should show drag cursor and no image

Review URL: http://codereview.chromium.org/1539018

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@43631 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 78043bddf1744180a28682f8cdf3359a9bfdef4b